--- a/templates/header_index.html
+++ b/templates/header_index.html
@@ -40,8 +40,8 @@
                 <li class="active"><a href="/">Главная</a></li>
                 <li><a href="{% url 'prices' %}">Цены и сроки</a></li>
                 <li><a href="{% url 'allposts' %}">Статьи</a></li>
-                <li><a href="#reviews">Отзывы</a></li>
-                <li><a href="#about">О нас</a></li>
+                <li><a href="#reviews" class="not-visible-sm">Отзывы</a></li>
+                <li><a href="#about" class="not-visible-sm">О нас</a></li>
                  <li><a href="{% url 'contacts' %}">Контакты</a></li>
             </ul>
         </div>
@@ -52,8 +52,8 @@
             <li class="active"><a href="/">Главная</a></li>
             <li><a href="{% url 'prices' %}">Цены и сроки</a></li>
             <li><a href="{% url 'allposts' %}">Статьи</a></li>
-            <li><a href="#reviews">Отзывы</a></li>
-            <li><a href="#about">О нас</a></li>
+            <li><a href="#reviews" class="not-visible-sm">Отзывы</a></li>
+            <li><a href="#about" class="not-visible-sm">О нас</a></li>
              <li><a href="{% url 'contacts' %}">Контакты</a></li>
         </ul>
         <a href="#callback_form" class="btn ">оформить заявку</a>
