--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -152,7 +152,7 @@
                 <div id="slide_1" class="how-it-works-slide slide-active">
                     <div class="slide-text">
                         <h5 data-number="01" class="mb30">Оставьте заявку и узнайте цену</h5>
-                        <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
+                        <p ><a class="link" href="#callback_form">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
                     </div>
                     <div class="slide-img text-right not-visible-sm">
                         <img src="{% static 'images/hw-slider.jpg' %}" alt="">
@@ -160,29 +160,29 @@
                 </div>
                 <div id="slide_2" class="how-it-works-slide ">
                     <div class="slide-text">
-                        <h5 data-number="02" class="mb30">Оставьте заявку и узнайте цену</h5>
-                        <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
+                        <h5 data-number="02" class="mb30">Менеджер расскажет вам все подробности и ответит на ваши вопросы</h5>
+                        <p>Менеджер обсудит с вами вашу проблему, подберет способ решения, предложит варианты оплаты, и назначит вам специалиста</p>
                     </div>
                     <div class="slide-img text-right not-visible-sm">
-                        <img src="{% static 'images/hw-slider.jpg' %}" alt="">
+                        <img src="{% static 'images/hw-slider1.jpg' %}" alt="">
                     </div>
                 </div>
                 <div id="slide_3" class="how-it-works-slide ">
                     <div class="slide-text">
-                        <h5 data-number="03" class="mb30">Оставьте заявку и узнайте цену</h5>
-                        <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
+                        <h5 data-number="03" class="mb30">Мы сами оповестим вас о готовности работы</h5>
+                        <p >Мы постоянно остаемся на связи и отвечаем на все ваши вопросы. После того, как ваша работа готова, мы сами связываемся с вамии предоставляем результат — данные анти-плагиата или другие необходимые данные</p>
                     </div>
                     <div class="slide-img text-right not-visible-sm">
-                        <img src="{% static 'images/hw-slider.jpg' %}" alt="">
+                        <img src="{% static 'images/hw-slider2.jpg' %}" alt="">
                     </div>
                 </div>
                 <div id="slide_4" class="how-it-works-slide ">
                     <div class="slide-text">
-                        <h5 data-number="04" class="mb30">Оставьте заявку и узнайте цену</h5>
-                        <p ><a class="link" href="#">Заполните несколько полей</a>, после чего мы сами моментально свяжемся с вами и отправим письмо с ценой вашей работы на ваш e-mail</p>
+                        <h5 data-number="04" class="mb30">Оплата работы</h5>
+                        <p >Вы производите доплату и мы полность передаем вам всю работу. После чего полностью сопроваждаем вас до полной сдачи работы, если необходимо выполнить доработки, выполняем бесплатно </p>
                     </div>
                     <div class="slide-img text-right not-visible-sm">
-                        <img src="{% static 'images/hw-slider.jpg' %}" alt="">
+                        <img src="{% static 'images/hw-slider3.jpg' %}" alt="">
                     </div>
                 </div>
 
@@ -268,14 +268,25 @@
         </div>
 
     </section><!-- // our-help -->
-    <section class="why-our-work">
+      <section class="why-our-work">
         <div class="container">
             <h3>Почему работу лучше купить,<br>чем делать самому?</h3>
-            <p class="mb40">Дипломная работа - это самое сложное и ответственное <span>задание за весь учебный срок</span></p>
-            <p class="mb40"><span>Риск получить низкий балл</span> из-за преподавателей и сложности оформления</p>
-            <p class="mb40">Лучше <span>положиться на профессионалов,</span> чем ошибиться самому</p>
-            <p>Написание дипломных работ – практически всегда <span>нервотрепка и стресс</span></p>
+            <p class="with-bullet mb40">Дипломная работа - это самое сложное и ответственное <span>задание за весь учебный срок</span></p>
+            <p class="with-bullet mb40"><span>Риск получить низкий балл</span> из-за преподавателей и сложности оформления</p>
+            <p class="with-bullet mb40">Лучше <span>положиться на профессионалов,</span> чем ошибиться самому</p>
+            <p class="with-bullet mb40">Написание дипломных работ – практически всегда <span>нервотрепка и стресс</span></p>
 
+            <div id="why-our-work-text" class="why-our-work-text not-visible-md">
+                <p class="mb20">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, quibusdam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, exercitationem.
+                </p>
+                <p class="mb20">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis nemo neque, omnis quasi quidem repudiandae. Blanditiis commodi delectus fuga illo ipsam odio praesentium qui rem suscipit tempora? At autem beatae consequatur, cupiditate dolor eaque enim eos excepturi fugiat hic illum iure maiores molestias nisi nostrum nulla, numquam odit quisquam quos sapiente sunt veritatis voluptatem voluptatum! Accusantium aliquid aut consectetur consequatur dignissimos dolor eveniet, exercitationem expedita labore magni minima, officiis perspiciatis porro possimus praesentium quidem quis quisquam similique soluta vel voluptates!
+                </p>
+
+
+            </div>
+            <a  onclick="readOurWorkText()" class="btn not-visible-md">читать полностью</a>
 
 
         </div>
@@ -303,6 +314,12 @@
             review_fullReview.innerHTML = el.dataset.fullreview
 
     }
+
+     function readOurWorkText() {
+        let x = document.getElementById("why-our-work-text")
+        x.classList.toggle('why-our-work-text-active')
+    }
+
     function readFullReview() {
 
         if (readfullreview_btn.innerHTML === "Читать далее...") {
