--- a/templates/footer.html
+++ b/templates/footer.html
@@ -49,6 +49,16 @@
 
 
 <script>
+
+
+    document.getElementsByName('file')[0].addEventListener('change', function () {
+        console.log('change')
+        let uploaded_files = 'Прикрепленные файлы : '
+        for (x of this.files){
+            uploaded_files += (x.name + ' ; ')
+        }
+        this.setAttribute('data-placeholder',uploaded_files)
+    })
     function sendForm() {
         let csrfmiddlewaretoken = document.getElementsByName('csrfmiddlewaretoken')[0].defaultValue
         let name = document.getElementsByName('name')[0]
@@ -59,13 +69,13 @@
         let about = document.getElementsByName('about')[0]
         let deadLine = document.getElementsByName('deadLine')[0]
         let volume = document.getElementsByName('volume')[0]
-        let file = document.getElementsByName('file')[0].files[0]
+        let file = document.getElementsByName('file')[0].files
         let btn = document.getElementById('form_submit')
         let error_label = document.getElementsByClassName('form-error')[0]
         let req_fields = [workName,phone,email,subject,about,name]
         let all_fields = [workName,phone,email,subject,about,name,deadLine,volume]
         error_label.style.display = 'none'
-
+console.log(file.files);
         btn.setAttribute('disabled', 'disabled');
         btn.firstChild.data = 'Отправка ...'
         for (i of req_fields){
@@ -76,7 +86,14 @@
         for (i of all_fields){
             fd.append(i.getAttribute('name'),i.value)
         }
-        fd.append('file',file)
+
+        for(var x=0;x<file.length;x++) {
+            fd.append('file',file.item(x))
+
+
+		}
+
+
         let xhr = new XMLHttpRequest();
         xhr.open('POST', '/callback/workprice/', true);
         xhr.onload = function () {
@@ -86,6 +103,9 @@
             }
             else{
                 error_label.style.display = 'block'
+                if (JSON.parse(this.response)['errors'] === 'phone'){
+                    phone.classList.add("error");
+                }
 
                 btn.removeAttribute('disabled')
                 btn.firstChild.data = 'Узнать стоимость своей работы'
