--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 *::before,
 *::after {
   -webkit-box-sizing: border-box;
@@ -509,9 +507,10 @@ input[type='file']::-webkit-file-upload-button {
 
 input[type='file']:before {
   position: absolute;
-  content: 'Прикрепить методичку';
+  content: attr(data-placeholder);
   color: #151515;
   bottom: 18px;
+  width: 90%;
 }
 
 input[type='file']:after {
