--- a/templates/callback_form.html
+++ b/templates/callback_form.html
@@ -21,13 +21,13 @@
                                    placeholder="Срок сдачи" type="date"
                                    onchange="this.className=(this.value!=''?'form-control form-control-sm has-value':'form-control form-control-sm')">
                         </div>
-                        <input type="file" class="form-control form-control-lg" name="{{ callbackForm.file.name }}">
+                       <input data-placeholder="Прикрепить файлы" type="file" class="form-control form-control-lg" name="file" multiple>
                     </div>
 
 
                 </div>
                 <div class="calculation-form-footer">
-                    <input class="form-control input-phone" name="{{ callbackForm.phone.name }}" value="" placeholder="Сотовый номер">
+                     <input type="tel"  name="{{ callbackForm.phone.name }}" class="masked-phone form-control input-phone" placeholder="Ваш сотовый номер" data-phonemask="+7(___)___-__-__" />
                     <input class="form-control input-email" name="{{ callbackForm.email.name }}" value="" placeholder="E-mail адрес">
                     <input class="form-control input-user" name="{{ callbackForm.name.name }}" value="" placeholder="Ваше ФИО">
                 </div>
